@@ -1,4 +1,4 @@
-# $NetBSD: mi,v 1.735 2004/11/24 20:49:18 bouyer Exp $
+# $NetBSD: mi,v 1.736 2004/12/01 22:27:45 grant Exp $
 ./etc/mtree/set.man				man-sys-root
 ./usr/share/info/am-utils.info			man-amd-info		info
 ./usr/share/info/as.info			man-computil-info	bfd,info
@@ -923,6 +923,7 @@
 ./usr/share/man/cat4/isic.0			man-sys-catman		.cat
 ./usr/share/man/cat4/iso.0			man-sys-catman		.cat
 ./usr/share/man/cat4/isp.0			man-sys-catman		.cat
+./usr/share/man/cat4/iteide.0			man-sys-catman		.cat
 ./usr/share/man/cat4/iwic.0			man-sys-catman		.cat
 ./usr/share/man/cat4/ix.0			man-sys-catman		.cat
 ./usr/share/man/cat4/iy.0			man-sys-catman		.cat
@@ -3076,6 +3077,7 @@
 ./usr/share/man/man4/isic.4			man-sys-man		.man
 ./usr/share/man/man4/iso.4			man-sys-man		.man
 ./usr/share/man/man4/isp.4			man-sys-man		.man
+./usr/share/man/man4/iteide.4			man-sys-man		.man
 ./usr/share/man/man4/iwic.4			man-sys-man		.man
 ./usr/share/man/man4/ix.4			man-sys-man		.man
 ./usr/share/man/man4/iy.4			man-sys-man		.man
